fixed issue w mobile devices using dark mode

--- a/src/assets/configuration.json
+++ b/src/assets/configuration.json
@@ -19,7 +19,7 @@
                 "Leveraged a full stack consisting of SQL Server, C#, WCF, Kendo UI, and jQuery to develop and support web applications hosted in a SharePoint environment.",
                 "Developed a web application to compound, analyze, and graphically display real-time usage analytics for all solutions hosted in our environment.",
                 "Led multiple development teams, working closely with stakeholders and QA in an agile environment to assess requirements, develop solutions, and refine products based on user feedback.",
-                "Led a small team to develop a COVID-19 self survey PWA to provide guidance on when to stay home from work.",
+                "Led a small team to develop a COVID-19 self survey PWA written in Ionic + Angular to provide guidance on when to stay home from work.",
                 "Active Secret Clearance."
             ]
         },
